(numbers in brackets normally mean the mantis ticket ID)

-- 102.0 --------------------------------------------------------
General:
 - Fix & Improve LoS performance
 ! remove LuaModUICtrl config setting
 ! remove ClassicGroundMoveType

Sim:
 - COB: deprecate unit/team/allyteam/global vars. Use lua functions instead.

Lua:
 - Add {Set,Get}FeatureRulesParam(s)
 - Add new Spring.ClearUnitGoal(unitID) callout.
 - add GamePaused and GameProgress callins to base gadget-handler
 - extend builtin uniform binding for custom Lua materials
   SEE "fix LuaMaterial uniform management" BELOW FOR THE
   LIST OF NEW LOCATION KEYS THAT ARE RECOGNIZED AS OF 102

Save/Load:
 ! remove UseCREGSaveLoad and add /LuaSave which generates .slsf files
 ! compress creg saves
 - SaveFile can be specified in start script in order to start from a save

Rendering:
 - reduce number of team-color updates for custom shaders
 - use frame-extrapolation for features (smoother movement)
 - skip drawing icons for void-space units

AI:
 - make skirmishAiCallback_Unit_getResource{Use,Make} not round their return values to ints

Misc:
 - make the time server spends in sleep calls configurable (for dedicated hosts)
 - rename the 'ReflectiveWater' config-key to 'Water' (to match the command)
 - set the 'GroundDetail' config-val only when it changes, not on shutdown
 - auto-normalize normals and tangents for all AssImp-loaded models
 - add a gameDeferredDraw=5 drawMode value (handy for Draw{Unit,Feature} to know)

Bugfixes:
 - fix invisible OBJ models
 - fix gl.DeleteShader allowing repeated deletion
 - fix Spring.SetSunLighting crash when AdvMapShading=0
 - fix Spring.ValidUnitID to accept nils again
 - fix wreckage jumping from large *horizontal* impulse
 - fix landed HoverAirMoveType aircraft behavior when given a command within their build range
 ! fix LuaMaterial uniform management for materials with standard and deferred shaders