@@ -145,9 +145,9 @@ EXPORT(int              ) skirmishAiCallback_Game_getCategoriesFlag(int skirmish
 
 EXPORT(void             ) skirmishAiCallback_Game_getCategoryName(int skirmishAIId, int categoryFlag, char* name, int name_sizeMax);
 
-EXPORT(float            ) skirmishAiCallback_Game_GameRulesParam_getValueFloat(int skirmishAIId, const char* rulesParamName);
+EXPORT(float            ) skirmishAiCallback_Game_getRulesParamValueFloat(int skirmishAIId, const char* rulesParamName);
 
-EXPORT(const char*      ) skirmishAiCallback_Game_GameRulesParam_getValueString(int skirmishAIId, const char* rulesParamName);
+EXPORT(const char*      ) skirmishAiCallback_Game_getRulesParamValueString(int skirmishAIId, const char* rulesParamName);
 
 // END misc callback functions
 
@@ -696,9 +696,9 @@ EXPORT(int              ) skirmishAiCallback_getSelectedUnits(int skirmishAIId, 
 
 EXPORT(int              ) skirmishAiCallback_Unit_getDef(int skirmishAIId, int unitId);
 
-EXPORT(float            ) skirmishAiCallback_Unit_UnitRulesParam_getValueFloat(int skirmishAIId, int unitId, const char* rulesParamName);
+EXPORT(float            ) skirmishAiCallback_Unit_getRulesParamValueFloat(int skirmishAIId, int unitId, const char* rulesParamName);
 
-EXPORT(const char*      ) skirmishAiCallback_Unit_UnitRulesParam_getValueString(int skirmishAIId, int unitId, const char* rulesParamName);
+EXPORT(const char*      ) skirmishAiCallback_Unit_getRulesParamValueString(int skirmishAIId, int unitId, const char* rulesParamName);
 
 EXPORT(int              ) skirmishAiCallback_Unit_getTeam(int skirmishAIId, int unitId);
 
@@ -792,9 +792,9 @@ EXPORT(int              ) skirmishAiCallback_getEnemyTeams(int skirmishAIId, int
 
 EXPORT(int              ) skirmishAiCallback_getAllyTeams(int skirmishAIId, int* teamIds, int teamIds_sizeMax);
 
-EXPORT(float            ) skirmishAiCallback_Team_TeamRulesParam_getValueFloat(int skirmishAIId, int teamId, const char* rulesParamName);
+EXPORT(float            ) skirmishAiCallback_Team_getRulesParamValueFloat(int skirmishAIId, int teamId, const char* rulesParamName);
 
-EXPORT(const char*      ) skirmishAiCallback_Team_TeamRulesParam_getValueString(int skirmishAIId, int teamId, const char* rulesParamName);
+EXPORT(const char*      ) skirmishAiCallback_Team_getRulesParamValueString(int skirmishAIId, int teamId, const char* rulesParamName);
 
 // END OBJECT Team
 
@@ -1065,9 +1065,9 @@ EXPORT(float            ) skirmishAiCallback_Feature_getReclaimLeft(int skirmish
 
 EXPORT(void             ) skirmishAiCallback_Feature_getPosition(int skirmishAIId, int featureId, float* return_posF3_out);
 
-EXPORT(float            ) skirmishAiCallback_Feature_FeatureRulesParam_getValueFloat(int skirmishAIId, int featureId, const char* rulesParamName);
+EXPORT(float            ) skirmishAiCallback_Feature_getRulesParamValueFloat(int skirmishAIId, int featureId, const char* rulesParamName);
 
-EXPORT(const char*      ) skirmishAiCallback_Feature_FeatureRulesParam_getValueString(int skirmishAIId, int featureId, const char* rulesParamName);
+EXPORT(const char*      ) skirmishAiCallback_Feature_getRulesParamValueString(int skirmishAIId, int featureId, const char* rulesParamName);
 
 // END OBJECT Feature
 
